// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpUsers Component should match snapshot 1`] = `
<div>
  <div
    style={
      Object {
        "animation": "bcCCNc 300ms ease 0s 1 normal none running",
        "backfaceVisibility": "visible",
      }
    }
  >
    <div
      className="spinner"
    >
      <span />
      <span />
      <span />
    </div>
    <div
      className="m_div cLoading"
      style={
        Object {
          "marginTop": 0,
        }
      }
    >
      <div
        className="m_wrapper"
        style={
          Object {
            "width": null,
          }
        }
      >
        <div
          className="m_on followers_m_on"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            className="m_top"
          >
            <img
              src="/users/7/avatar.jpg"
            />
            <div
              className="m_top_right"
            >
              <Link
                to="/profile/ghalib"
              >
                ghalib
              </Link>
              <span>
                1 mutual follower
              </span>
            </div>
          </div>
          <div
            className="m_bottom"
          >
            <a
              className="pri_btn follow"
              href="#"
              onClick={[Function]}
            >
              Follow
            </a>
          </div>
        </div>
        <div
          className="m_on followers_m_on"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <div
            className="m_top"
          >
            <img
              src="/users/8/avatar.jpg"
            />
            <div
              className="m_top_right"
            >
              <Link
                to="/profile/coldplay"
              >
                coldplay
              </Link>
              <span>
                cold play
              </span>
            </div>
          </div>
          <div
            className="m_bottom"
          >
            <a
              className="pri_btn follow"
              href="#"
              onClick={[Function]}
            >
              Follow
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpUsers Component should match snapshot and show <Nothing/> when users.length == 0 1`] = `
<div>
  <div
    style={
      Object {
        "animation": "bcCCNc 300ms ease 0s 1 normal none running",
        "backfaceVisibility": "visible",
      }
    }
  >
    <div
      className="spinner"
    >
      <span />
      <span />
      <span />
    </div>
    <div
      className="m_div cLoading"
      style={
        Object {
          "marginTop": 0,
        }
      }
    >
      <div
        className="m_wrapper"
        style={
          Object {
            "width": 500,
          }
        }
      >
        <div
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <div
            className="home_last_mssg"
            style={
              Object {
                "border": "",
              }
            }
          >
            <img
              src="/images/large.jpg"
            />
            <span
              className="nothingMssg"
            >
              Sorry, no users to explore!!
            </span>
            <span
              className="secondMssg"
            >
              
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
